// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and takes an offset as props 1`] = `
{
  "instance": null,
  "nodeType": "component",
  "props": {
    "bottomOffset": 84,
  },
  "rendered": [
    {
      "instance": null,
      "nodeType": "host",
      "props": {
        "aria-label": "Choose how often you are prompted to sign in on this device with your Two-Factor Authentication method.",
        "children": [
          <div
            className="expiration-dropdown-value keeper-outfit outfit-body-medium"
          >
            Every login
          </div>,
          <DropDownArrow
            ariaHidden={true}
            svgColorName="black"
          />,
        ],
        "className": "expiration-dropdown-container focus-visible",
        "onClick": [Function],
        "onKeyDown": [Function],
        "role": "button",
        "tabIndex": 0,
      },
      "rendered": [
        {
          "instance": null,
          "nodeType": "host",
          "props": {
            "children": "Every login",
            "className": "expiration-dropdown-value keeper-outfit outfit-body-medium",
          },
          "rendered": [
            "Every login",
          ],
          "type": "div",
        },
        {
          "instance": null,
          "nodeType": "component",
          "props": {
            "ariaHidden": true,
            "svgColorName": "black",
          },
          "rendered": {
            "instance": null,
            "nodeType": "host",
            "props": {
              "aria-hidden": true,
              "children": <path
                d="M7 10.041L12 14.939L17 10.041H7Z"
                fill="black"
              />,
              "className": "keeper-iconbutton-dropdown-arrow",
              "fill": "none",
              "height": "24",
              "style": undefined,
              "viewBox": "0 0 24 24",
              "width": "24",
              "xmlns": "http://www.w3.org/2000/svg",
            },
            "rendered": [
              {
                "instance": null,
                "nodeType": "host",
                "props": {
                  "d": "M7 10.041L12 14.939L17 10.041H7Z",
                  "fill": "black",
                },
                "rendered": [],
                "type": "path",
              },
            ],
            "type": "svg",
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
    {
      "instance": null,
      "nodeType": "host",
      "props": {
        "children": [
          <div
            aria-selected={true}
            className="expiration-selector-item keeper-outfit outfit-body-medium highlighted focus-visible"
            data-value={0}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <div
              aria-hidden="true"
              className="expiration-title"
              id="0"
            >
              Every login
            </div>
            <svg
              fill="none"
              height="20"
              viewBox="0 0 18 14"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.00016 11.1701L1.83016 7.00009L0.410156 8.41009L6.00016 14.0001L18.0002 2.00009L16.5902 0.590088L6.00016 11.1701Z"
                fill="#323232"
              />
            </svg>
          </div>,
          <div
            aria-selected={false}
            className="expiration-selector-item keeper-outfit outfit-body-medium focus-visible"
            data-value={2}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <div
              aria-hidden="true"
              className="expiration-title"
              id="2"
            >
              Every 12 hours
            </div>
          </div>,
          <div
            aria-selected={false}
            className="expiration-selector-item keeper-outfit outfit-body-medium focus-visible"
            data-value={3}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <div
              aria-hidden="true"
              className="expiration-title"
              id="3"
            >
              Every 24 hours
            </div>
          </div>,
          <div
            aria-selected={false}
            className="expiration-selector-item keeper-outfit outfit-body-medium focus-visible"
            data-value={4}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <div
              aria-hidden="true"
              className="expiration-title"
              id="4"
            >
              Every 30 days
            </div>
          </div>,
          <div
            aria-selected={false}
            className="expiration-selector-item keeper-outfit outfit-body-medium focus-visible"
            data-value={5}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="option"
          >
            <div
              aria-hidden="true"
              className="expiration-title"
              id="5"
            >
              Don't ask again on this device
            </div>
          </div>,
        ],
        "className": "keeper-outfit outfit-body-medium expiration-selector-items hidden",
        "onKeyDown": [Function],
        "role": "menu",
        "style": {
          "bottom": 84,
          "width": "272px",
          "zIndex": 3,
        },
      },
      "rendered": [
        {
          "instance": null,
          "nodeType": "host",
          "props": {
            "aria-selected": true,
            "children": [
              <div
                aria-hidden="true"
                className="expiration-title"
                id="0"
              >
                Every login
              </div>,
              <svg
                fill="none"
                height="20"
                viewBox="0 0 18 14"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.00016 11.1701L1.83016 7.00009L0.410156 8.41009L6.00016 14.0001L18.0002 2.00009L16.5902 0.590088L6.00016 11.1701Z"
                  fill="#323232"
                />
              </svg>,
            ],
            "className": "expiration-selector-item keeper-outfit outfit-body-medium highlighted focus-visible",
            "data-value": 0,
            "onClick": [Function],
            "onKeyDown": [Function],
            "role": "option",
          },
          "rendered": [
            {
              "instance": null,
              "nodeType": "host",
              "props": {
                "aria-hidden": "true",
                "children": "Every login",
                "className": "expiration-title",
                "id": "0",
              },
              "rendered": [
                "Every login",
              ],
              "type": "div",
            },
            {
              "instance": null,
              "nodeType": "host",
              "props": {
                "children": <path
                  d="M6.00016 11.1701L1.83016 7.00009L0.410156 8.41009L6.00016 14.0001L18.0002 2.00009L16.5902 0.590088L6.00016 11.1701Z"
                  fill="#323232"
                />,
                "fill": "none",
                "height": "20",
                "viewBox": "0 0 18 14",
                "width": "20",
                "xmlns": "http://www.w3.org/2000/svg",
              },
              "rendered": [
                {
                  "instance": null,
                  "nodeType": "host",
                  "props": {
                    "d": "M6.00016 11.1701L1.83016 7.00009L0.410156 8.41009L6.00016 14.0001L18.0002 2.00009L16.5902 0.590088L6.00016 11.1701Z",
                    "fill": "#323232",
                  },
                  "rendered": [],
                  "type": "path",
                },
              ],
              "type": "svg",
            },
          ],
          "type": "div",
        },
        {
          "instance": null,
          "nodeType": "host",
          "props": {
            "aria-selected": false,
            "children": [
              <div
                aria-hidden="true"
                className="expiration-title"
                id="2"
              >
                Every 12 hours
              </div>,
              undefined,
            ],
            "className": "expiration-selector-item keeper-outfit outfit-body-medium focus-visible",
            "data-value": 2,
            "onClick": [Function],
            "onKeyDown": [Function],
            "role": "option",
          },
          "rendered": [
            {
              "instance": null,
              "nodeType": "host",
              "props": {
                "aria-hidden": "true",
                "children": "Every 12 hours",
                "className": "expiration-title",
                "id": "2",
              },
              "rendered": [
                "Every 12 hours",
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        {
          "instance": null,
          "nodeType": "host",
          "props": {
            "aria-selected": false,
            "children": [
              <div
                aria-hidden="true"
                className="expiration-title"
                id="3"
              >
                Every 24 hours
              </div>,
              undefined,
            ],
            "className": "expiration-selector-item keeper-outfit outfit-body-medium focus-visible",
            "data-value": 3,
            "onClick": [Function],
            "onKeyDown": [Function],
            "role": "option",
          },
          "rendered": [
            {
              "instance": null,
              "nodeType": "host",
              "props": {
                "aria-hidden": "true",
                "children": "Every 24 hours",
                "className": "expiration-title",
                "id": "3",
              },
              "rendered": [
                "Every 24 hours",
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        {
          "instance": null,
          "nodeType": "host",
          "props": {
            "aria-selected": false,
            "children": [
              <div
                aria-hidden="true"
                className="expiration-title"
                id="4"
              >
                Every 30 days
              </div>,
              undefined,
            ],
            "className": "expiration-selector-item keeper-outfit outfit-body-medium focus-visible",
            "data-value": 4,
            "onClick": [Function],
            "onKeyDown": [Function],
            "role": "option",
          },
          "rendered": [
            {
              "instance": null,
              "nodeType": "host",
              "props": {
                "aria-hidden": "true",
                "children": "Every 30 days",
                "className": "expiration-title",
                "id": "4",
              },
              "rendered": [
                "Every 30 days",
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        {
          "instance": null,
          "nodeType": "host",
          "props": {
            "aria-selected": false,
            "children": [
              <div
                aria-hidden="true"
                className="expiration-title"
                id="5"
              >
                Don't ask again on this device
              </div>,
              undefined,
            ],
            "className": "expiration-selector-item keeper-outfit outfit-body-medium focus-visible",
            "data-value": 5,
            "onClick": [Function],
            "onKeyDown": [Function],
            "role": "option",
          },
          "rendered": [
            {
              "instance": null,
              "nodeType": "host",
              "props": {
                "aria-hidden": "true",
                "children": "Don't ask again on this device",
                "className": "expiration-title",
                "id": "5",
              },
              "rendered": [
                "Don't ask again on this device",
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  "type": [Function],
}
`;

exports[`renders and takes an offset as props 2`] = `
{
  "instance": null,
  "nodeType": "component",
  "props": {
    "children": <ExpirationDropdown
      bottomOffset={50}
    />,
    "store": {
      "dispatch": [Function],
      "getState": [Function],
      "subscribe": [Function],
    },
  },
  "rendered": {
    "instance": null,
    "nodeType": "component",
    "props": {
      "bottomOffset": 50,
    },
    "rendered": [
      {
        "instance": null,
        "nodeType": "host",
        "props": {
          "aria-label": "Choose how often you are prompted to sign in on this device with your Two-Factor Authentication method.",
          "children": [
            <div
              className="expiration-dropdown-value keeper-outfit outfit-body-medium"
            >
              Every login
            </div>,
            <DropDownArrow
              ariaHidden={true}
              svgColorName="black"
            />,
          ],
          "className": "expiration-dropdown-container focus-visible",
          "onClick": [Function],
          "onKeyDown": [Function],
          "role": "button",
          "tabIndex": 0,
        },
        "rendered": [
          {
            "instance": null,
            "nodeType": "host",
            "props": {
              "children": "Every login",
              "className": "expiration-dropdown-value keeper-outfit outfit-body-medium",
            },
            "rendered": [
              "Every login",
            ],
            "type": "div",
          },
          {
            "instance": null,
            "nodeType": "component",
            "props": {
              "ariaHidden": true,
              "svgColorName": "black",
            },
            "rendered": {
              "instance": null,
              "nodeType": "host",
              "props": {
                "aria-hidden": true,
                "children": <path
                  d="M7 10.041L12 14.939L17 10.041H7Z"
                  fill="black"
                />,
                "className": "keeper-iconbutton-dropdown-arrow",
                "fill": "none",
                "height": "24",
                "style": undefined,
                "viewBox": "0 0 24 24",
                "width": "24",
                "xmlns": "http://www.w3.org/2000/svg",
              },
              "rendered": [
                {
                  "instance": null,
                  "nodeType": "host",
                  "props": {
                    "d": "M7 10.041L12 14.939L17 10.041H7Z",
                    "fill": "black",
                  },
                  "rendered": [],
                  "type": "path",
                },
              ],
              "type": "svg",
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
      {
        "instance": null,
        "nodeType": "host",
        "props": {
          "children": [
            <div
              aria-selected={true}
              className="expiration-selector-item keeper-outfit outfit-body-medium highlighted focus-visible"
              data-value={0}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              <div
                aria-hidden="true"
                className="expiration-title"
                id="0"
              >
                Every login
              </div>
              <svg
                fill="none"
                height="20"
                viewBox="0 0 18 14"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.00016 11.1701L1.83016 7.00009L0.410156 8.41009L6.00016 14.0001L18.0002 2.00009L16.5902 0.590088L6.00016 11.1701Z"
                  fill="#323232"
                />
              </svg>
            </div>,
            <div
              aria-selected={false}
              className="expiration-selector-item keeper-outfit outfit-body-medium focus-visible"
              data-value={2}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              <div
                aria-hidden="true"
                className="expiration-title"
                id="2"
              >
                Every 12 hours
              </div>
            </div>,
            <div
              aria-selected={false}
              className="expiration-selector-item keeper-outfit outfit-body-medium focus-visible"
              data-value={3}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              <div
                aria-hidden="true"
                className="expiration-title"
                id="3"
              >
                Every 24 hours
              </div>
            </div>,
            <div
              aria-selected={false}
              className="expiration-selector-item keeper-outfit outfit-body-medium focus-visible"
              data-value={4}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              <div
                aria-hidden="true"
                className="expiration-title"
                id="4"
              >
                Every 30 days
              </div>
            </div>,
            <div
              aria-selected={false}
              className="expiration-selector-item keeper-outfit outfit-body-medium focus-visible"
              data-value={5}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="option"
            >
              <div
                aria-hidden="true"
                className="expiration-title"
                id="5"
              >
                Don't ask again on this device
              </div>
            </div>,
          ],
          "className": "keeper-outfit outfit-body-medium expiration-selector-items hidden",
          "onKeyDown": [Function],
          "role": "menu",
          "style": {
            "bottom": 50,
            "width": "0px",
            "zIndex": 3,
          },
        },
        "rendered": [
          {
            "instance": null,
            "nodeType": "host",
            "props": {
              "aria-selected": true,
              "children": [
                <div
                  aria-hidden="true"
                  className="expiration-title"
                  id="0"
                >
                  Every login
                </div>,
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 18 14"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.00016 11.1701L1.83016 7.00009L0.410156 8.41009L6.00016 14.0001L18.0002 2.00009L16.5902 0.590088L6.00016 11.1701Z"
                    fill="#323232"
                  />
                </svg>,
              ],
              "className": "expiration-selector-item keeper-outfit outfit-body-medium highlighted focus-visible",
              "data-value": 0,
              "onClick": [Function],
              "onKeyDown": [Function],
              "role": "option",
            },
            "rendered": [
              {
                "instance": null,
                "nodeType": "host",
                "props": {
                  "aria-hidden": "true",
                  "children": "Every login",
                  "className": "expiration-title",
                  "id": "0",
                },
                "rendered": [
                  "Every login",
                ],
                "type": "div",
              },
              {
                "instance": null,
                "nodeType": "host",
                "props": {
                  "children": <path
                    d="M6.00016 11.1701L1.83016 7.00009L0.410156 8.41009L6.00016 14.0001L18.0002 2.00009L16.5902 0.590088L6.00016 11.1701Z"
                    fill="#323232"
                  />,
                  "fill": "none",
                  "height": "20",
                  "viewBox": "0 0 18 14",
                  "width": "20",
                  "xmlns": "http://www.w3.org/2000/svg",
                },
                "rendered": [
                  {
                    "instance": null,
                    "nodeType": "host",
                    "props": {
                      "d": "M6.00016 11.1701L1.83016 7.00009L0.410156 8.41009L6.00016 14.0001L18.0002 2.00009L16.5902 0.590088L6.00016 11.1701Z",
                      "fill": "#323232",
                    },
                    "rendered": [],
                    "type": "path",
                  },
                ],
                "type": "svg",
              },
            ],
            "type": "div",
          },
          {
            "instance": null,
            "nodeType": "host",
            "props": {
              "aria-selected": false,
              "children": [
                <div
                  aria-hidden="true"
                  className="expiration-title"
                  id="2"
                >
                  Every 12 hours
                </div>,
                undefined,
              ],
              "className": "expiration-selector-item keeper-outfit outfit-body-medium focus-visible",
              "data-value": 2,
              "onClick": [Function],
              "onKeyDown": [Function],
              "role": "option",
            },
            "rendered": [
              {
                "instance": null,
                "nodeType": "host",
                "props": {
                  "aria-hidden": "true",
                  "children": "Every 12 hours",
                  "className": "expiration-title",
                  "id": "2",
                },
                "rendered": [
                  "Every 12 hours",
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          {
            "instance": null,
            "nodeType": "host",
            "props": {
              "aria-selected": false,
              "children": [
                <div
                  aria-hidden="true"
                  className="expiration-title"
                  id="3"
                >
                  Every 24 hours
                </div>,
                undefined,
              ],
              "className": "expiration-selector-item keeper-outfit outfit-body-medium focus-visible",
              "data-value": 3,
              "onClick": [Function],
              "onKeyDown": [Function],
              "role": "option",
            },
            "rendered": [
              {
                "instance": null,
                "nodeType": "host",
                "props": {
                  "aria-hidden": "true",
                  "children": "Every 24 hours",
                  "className": "expiration-title",
                  "id": "3",
                },
                "rendered": [
                  "Every 24 hours",
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          {
            "instance": null,
            "nodeType": "host",
            "props": {
              "aria-selected": false,
              "children": [
                <div
                  aria-hidden="true"
                  className="expiration-title"
                  id="4"
                >
                  Every 30 days
                </div>,
                undefined,
              ],
              "className": "expiration-selector-item keeper-outfit outfit-body-medium focus-visible",
              "data-value": 4,
              "onClick": [Function],
              "onKeyDown": [Function],
              "role": "option",
            },
            "rendered": [
              {
                "instance": null,
                "nodeType": "host",
                "props": {
                  "aria-hidden": "true",
                  "children": "Every 30 days",
                  "className": "expiration-title",
                  "id": "4",
                },
                "rendered": [
                  "Every 30 days",
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          {
            "instance": null,
            "nodeType": "host",
            "props": {
              "aria-selected": false,
              "children": [
                <div
                  aria-hidden="true"
                  className="expiration-title"
                  id="5"
                >
                  Don't ask again on this device
                </div>,
                undefined,
              ],
              "className": "expiration-selector-item keeper-outfit outfit-body-medium focus-visible",
              "data-value": 5,
              "onClick": [Function],
              "onKeyDown": [Function],
              "role": "option",
            },
            "rendered": [
              {
                "instance": null,
                "nodeType": "host",
                "props": {
                  "aria-hidden": "true",
                  "children": "Don't ask again on this device",
                  "className": "expiration-title",
                  "id": "5",
                },
                "rendered": [
                  "Don't ask again on this device",
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": [Function],
  },
  "type": [Function],
}
`;
